syntax = "proto3";

option java_package = "cs682";
option java_outer_classname = "ChatProto1";

message ZKData {
    string ip = 1;
    string port = 2;
    string udpport = 3;
}

message ChatProto {
    string from = 1;
    string message = 2;
    bool is_bcast = 3;
}

message Reply {
    int32 status = 1;
    string message = 2;
}

message Data {
    packetType type = 1;
    int32 seq_no = 2;
    bytes data = 3;
    bool is_last = 4;

    enum packetType {
        REQUEST = 0;
        ACK = 1;
        DATA = 2;
    }
}

message History {
    repeated ChatProto history = 1;
}